# platform-scripts

./: .gitignore  LICENSE  Makefile  README.md
.github/workflows/: lint-and-test.yml
advisory/: README.md  ml-maturity-assessment.py  technical-due-diligence-checklist.md
cli/repo_health/: README.md  pyproject.toml
cli/repo_health/repo_health/: __init__.py  check.py
cli/repo_health/tests/: test_check.py
cost-optimization/: cloud-cost-baseline.py
cost-optimization/aws/: idle-ebs-volumes.py
cost-optimization/gcp/: unused-disks.sh
cost-optimization/k8s/: rightsize-requests.py
deployment/k8s/: namespace-cleanup.sh  resource-quotas-template.yml  rolling-restart.sh
deployment/terraform/aws-gpu-node-pool/: README.md  main.tf  variables.tf
deployment/terraform/azure-gpu-node-pool/: README.md  main.tf  variables.tf
deployment/terraform/gke-gpu-node-pool/: README.md  main.tf  variables.tf
observability/alerts/: prometheus-rules.yml
observability/grafana-dashboards/: gpu-cluster.json
observability/promql/: gpu-utilization.query  inference-latency-slo.query
